src/test/deca/context/invalid/class/7_declMethodParamInvalide.deca
/* Description:
     tester class qui possede de method  invalid
     le parametre est de type void

    Historique:
      cree le 08/01/2020
*/

   class A {

    void getX (void x){

    }


   }
